# operacaobanco

./: README.md
operacaobanco/: Cargo.toml  diagrama_operacao_banco.drawio
operacaobanco/src/: main.rs
operacaobanco/src/CRM/: input_type_abertura_banco.rs  mod.rs
operacaobanco/src/exceptions/: asynchronus_exception.rs  mod.rs
operacaobanco/src/interface/: idepartamentofinanceiro.rs  info.rs  ivalidations.rs  mod.rs
operacaobanco/src/private/: abstract_class_banco.rs  class_abertura_conta.rs  class_dados_bancarios.rs  class_dados_pessoais.rs  class_empresa.rs  class_pessoa.rs  enum_segmento_operacao.rs  enum_tipo_conta.rs  enum_tipo_pessoa.rs  mod.rs
